kubernetes/minecraft/game.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game
      version: "0.1"  
  template:
    metadata:
      labels:
        app: game
        version: "0.1"
    spec:
      containers:
      - name: papermc
        image: itzg/minecraft-server:latest
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
        resources:
          limits:
            memory: "2Gi"
            cpu: "2"
        ports:
        - containerPort: 25565
      volumes:
      - name: data
        configMap:
          name: game
          items:
          - key: "server.protperties"
            path: "server.properties"
        
      - name: config
        configMap:
          name: game
          items:
          - key: "paper-global.yml"
            path: "paper-global.yml"
---
apiVersion: v1
kind: Service
metadata:
  name: game
  namespace: minecraft
spec:
  selector:
    app: game
    version: "0.1"
  ports:
  - port: 25565
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: game
  namespace: minecraft
spec:
  hosts:
  - "proxy"
  gateways:
  - minecraft
  tcp:
  - match:
    - port: 25565
    route:
    - destination:
        host: proxy
        port:
          number: 25565
...
