kubernetes/minecraft/life.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: life
  namespace: minecraft
spec:
  serviceName: life
  replicas: 3
  selector:
    matchLabels:
      app: life
      version: "0.1"  
  template:
    metadata:
      labels:
        app: life
        version: "0.1"
    spec:
      containers:
      - name: papermc
        image: itzg/minecraft-server:latest
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
        - name: data
          mountPath: "/data"
        resources:
          limits:
            memory: "2Gi"
            cpu: "2"
        ports:
        - containerPort: 25565
      volumes:
      - name: config
        configMap:
          name: life
          items:
          - key: "server.properties"
            path: "server.properties"
          - key: "paper-global.yml"
            path: "paper-global.yml"
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 16Gi
---
apiVersion: v1
kind: Service
metadata:
  name: life
  namespace: minecraft
spec:
  selector:
    app: life
    version: "0.1"
  ports:
  - port: 25565
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: life
  namespace: minecraft
spec:
  workloadSelector:
    labels:
      app: life
  ingress:
  - port: 
      number: 25565
      protocol: TCP
      name: proxy
    bind: "0.0.0.0"
    defaultEndpoint: "127.0.0.1:25565"
...
