kubernetes/minecraft/proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: velocity 
        image: itzg/bungeecord:latest
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
        resources:
          limits:
            memory: "1024Mi"
            cpu: "2"
        ports:
        - containerPort: 25565
      volumes:
      - name: config
        configMap:
          name: velocity-config
          items:
          - key: "velocity.toml"
            path: "velocity.toml"
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: minecraft
spec:
  selector:
    app: proxy
  ports:
  - port: 25565
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: proxy
  namespace: minecraft
spec:
  hosts:
  - "*"
  gateways:
  - minecraft
  tcp:
  - match:
    - port: 25565
    route:
    - destination:
        host: proxy
        port:
          number: 25565
...
