kubernetes/minecraft/server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server1
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      version: "0.1"  
  template:
    metadata:
      labels:
        app: server
        version: "0.1"
    spec:
      containers:
      - name: papermc
        image: itzg/minecraft-server:latest
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
        resources:
          limits:
            memory: "2Gi"
            cpu: "2"
        ports:
        - containerPort: 25565
      volumes:
      - name: data
        configMap:
          name: server-config
          items:
          - key: "server.protperties"
            path: "server.properties"
        
      - name: config
        configMap:
          name: server-config
          items:
          - key: "paper-global.yml"
            path: "paper-global.yml"
---
apiVersion: v1
kind: Service
metadata:
  name: server1
  namespace: minecraft
spec:
  selector:
    app: server
    version: "0.1"
  ports:
  - port: 25565
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: server
  namespace: minecraft
spec:
  workloadSelector:
    labels:
      app: server
  ingress:
  - port: 
      number: 25565
      protocol: TCP
      name: proxy
    bind: "0.0.0.0"
    defaultEndpoint: "127.0.0.1:25565"
...
